Fixed the dropzone image overflowing.

--- a/public/css/coanda.css
+++ b/public/css/coanda.css
@@ -331,3 +331,8 @@ td.order-column .input-sm
 	white-space: nowrap;
 	overflow: hidden;
 }
+
+.dropzone
+{
+	overflow: hidden;
+}
